--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.5.1",
+    "daisyui": "^3.9.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "sort-by": "^1.2.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
