--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.3.3"
   },
