--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-select": "^5.7.7",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.3.3"
