--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-select": "^5.7.7",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.3.3"
