--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rent-car",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://Lifuss.github.io/rent-car/",
   "type": "module",
   "scripts": {
     "dev": "vite",
