--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://Lifuss.github.io/rent-car/",
   "type": "module",
   "scripts": {
+    "lint:js": "eslint . --ext .js",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -26,7 +27,7 @@
     "react-select": "^5.7.7",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
