--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rent-car",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://lifuss.github.io/rent-car/",
+  "homepage": "https://lifuss.github.io/CaRentTime/",
   "type": "module",
   "scripts": {
     "dev": "vite",
