--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ca-rent-time",
+  "name": "car-rental",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://lifuss.github.io/ca-rent-time/",
+  "homepage": "https://lifuss.github.io/CaRentTime/",
   "type": "module",
   "scripts": {
     "dev": "vite",
